// protoc --go_out=plugins=grpc:. *.proto

syntax = "proto3";

import "google/protobuf/timestamp.proto";

package userService;
option go_package = ".;userService";

message Session {
  string session = 1;
}

message User {
  string email = 1;
  string firstName = 2;
  string lastName = 3;
  string password = 5;
  string UUID = 6;
  google.protobuf.Timestamp createdAt = 7;
  google.protobuf.Timestamp updatedAt = 8;
}

message RegisterRequest {
  string email = 1;
  string firstName = 2;
  string lastName = 3;
  string password = 5;
}

message RegisterResponse {
  string email = 1;
  string firstName = 2;
  string lastName = 3;
  string UUID = 4;
  google.protobuf.Timestamp createdAt = 5;
  google.protobuf.Timestamp updatedAt = 6;
}


service UserService{
  rpc Register(RegisterRequest) returns (RegisterResponse);
}